service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-copy-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30009
  selector:
      app: sample-app
