ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  labels:
    name: sample-app-ingress
spec:
  rules:
  - host: weatherforecast-sample-app.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-deployment
            port:
              number: 3000
